--- a/koha-tmpl/intranet-tmpl/default/en/reports/issues_stats.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/reports/issues_stats.tmpl
@@ -205,6 +205,7 @@
 	<div id="bloc25">
 		<h3 class="reports"> Cell value </h3>
 			<p><input type="radio" name="Cellvalue" value="1" checked> Count issues </p>
+			<p><input type="radio" name="Cellvalue" value="2" > Count borrowers </p>
 			<p><input type="radio" name="Cellvalue" value="3"> Circulation rate </p>
 	</div>
 	<div id="bloc25">
