--- a/koha-tmpl/intranet-tmpl/default/de/reports/issues_stats.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/reports/issues_stats.tmpl
@@ -205,13 +205,16 @@
 	<div id="bloc25">
 		<h3 class="reports"> Zellwert </h3>
 			<p><input type="radio" name="Cellvalue" value="1" checked> Ausleihen z&auml;hlen </p>
+			<p><input type="radio" name="Cellvalue" value="2" > Benutzer z&auml;hlen </p>
 			<p><input type="radio" name="Cellvalue" value="3"> Ausleihh&auml;ufigkeit </p>
 	</div>
 	<div id="bloc25">
 		<h3 class="reports"> Ausgabe </h3>
 		<input type="radio" checked name="output" value="screen" > In ein Browserfenster
 		<br>
-		<input type="radio" name="output" value="file"> In eine Datei <input type="text" name="basename" value="Export"> In eine Anwendung <!-- TMPL_VAR NAME="CGIextChoice" --> <!-- TMPL_VAR NAME="CGIsepChoice" -->
+		<input type="radio" name="output" value="file"> In eine Datei <input type="text" name="basename" value="Export"> In eine Anwendung
+		 <!-- TMPL_VAR NAME="CGIextChoice" -->
+		 <!-- TMPL_VAR NAME="CGIsepChoice" -->
 	</p>
 	</div>
 	<p>
