--- a/koha-tmpl/intranet-tmpl/default/de/circ/circulation.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/circ/circulation.tmpl
@@ -11,7 +11,9 @@
 		<h2 class="circulation">Parameter</h2>
 		<p>
 			<b>Zweigstelle:</b> <!-- TMPL_VAR NAME="branchname" --> &nbsp; 
-			<b>Drucker:</b> <!-- TMPL_VAR NAME="printername" --> <a href="selectbranchprinter.pl" class="button circulation">Einstellungen &auml;ndern</a>
+			<b>Drucker:</b> <!-- TMPL_VAR NAME="printername" --> 
+			<a href="selectbranchprinter.pl" class="button circulation">Einstellungen &auml;ndern</a>
+			
 		</p>
 	
 	<!-- TMPL_IF NAME="message" -->
@@ -155,7 +157,7 @@
 		<!-- TMPL_IF NAME="IMPOSSIBLE" -->
 		<h2 class="problem">Ausleihe nicht m&ouml;glich</h2>
 			<!-- TMPL_IF NAME="INVALID_DATE" -->
-				<p class="problem">Das &Uuml;berzeihungsdatum ist ung&uuml;ltig</p>
+				<p class="problem">Das &Uuml;berziehungsdatum ist ung&uuml;ltig</p>
 			<!-- /TMPL_IF -->
 			<!-- TMPL_IF NAME="UNKNOWN_BARCODE" -->
 				<p class="problem">Strichcode unbekannt</p>
@@ -243,7 +245,7 @@ SUMMARY : TODAY & PREVIOUS ISSUES
 			<th class="circulation">Call number</th>
 		</tr>
 		<!-- TMPL_LOOP NAME="todayissues" -->
-		<tr>
+		<!-- TMPL_IF NAME="togglecolor" --><tr class="hilighted"><!-- TMPL_ELSE --><tr><!-- /TMPL_IF -->
 			<td><!-- TMPL_VAR NAME="dd" --></td>
 			<td>
 				<a href="/cgi-bin/koha/detail.pl?bib=<!-- TMPL_VAR NAME="biblionumber" -->&amp;type=intra" onclick="openWindow(this, 'Item', 480, 640); return false;"><!-- TMPL_VAR NAME="barcode" --></a>
@@ -272,7 +274,7 @@ SUMMARY : TODAY & PREVIOUS ISSUES
 			<th class="circulation">Call number</th>
 		</tr>
 		<!-- TMPL_LOOP NAME="previssues" -->
-			<tr>
+		<!-- TMPL_IF NAME="togglecolor" --><tr class="hilighted"><!-- TMPL_ELSE --><tr><!-- /TMPL_IF -->	
 				<!-- TMPL_IF NAME="od" -->
 					<td class="problem">
 						<!-- TMPL_VAR NAME="dd" -->
