--- a/koha-tmpl/intranet-tmpl/default/en/authorities/searchresultlist-auth.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/authorities/searchresultlist-auth.tmpl
@@ -45,7 +45,7 @@
 		<div id="resultnumber">
 			<p>
 				<!-- TMPL_IF name="displayprev" -->
-					<a href="auth_finder.pl?startfrom=<!-- TMPL_VAR NAME="startfromprev" -->&amp;&amp;authtypecode=<!-- TMPL_VAR name="authtypecode" -->&and_or=and&operator=contains&value=<!-- TMPL_VAR NAME="resultstring" -->&op=do_search&type=intranet&index=<!-- TMPL_VAR name="index" -->">
+					<a href="auth_finder.pl?startfrom=<!-- TMPL_VAR NAME="startfromprev" -->&amp;<!-- TMPL_LOOP NAME="searchdata" --><!-- TMPL_VAR NAME="term" -->=<!-- TMPL_VAR NAME="val" ESCAPE=URL -->&amp;<!-- /TMPL_LOOP -->resultsperpage=<!-- TMPL_VAR NAME="resultsperpage" -->&amp;authtypecode=<!-- TMPL_VAR name="authtypecode" -->&op=do_search&type=intranet">
 						<img src="/intranet-tmpl/default/images/numbers/prev.gif" border="0">
 					</a>
 				<!-- /TMPL_IF -->
@@ -53,12 +53,12 @@
 					<!-- TMPL_IF name="highlight" -->
 						<img src="/intranet-tmpl/default/images/numbers/<!-- TMPL_VAR NAME="number" -->-highlight.gif">
 					<!-- TMPL_ELSE -->
-						<a href="auth_finder.pl?startfrom=<!-- TMPL_VAR NAME="startfrom" -->&amp;authtypecode=<!-- TMPL_VAR name="authtypecode" -->&and_or=and&operator=contains&value=<!-- TMPL_VAR NAME="resultstring" -->&op=do_search&type=intranet&index=<!-- TMPL_VAR name="index" -->">
+						<a href="auth_finder.pl?startfrom=<!-- TMPL_VAR NAME="startfrom" -->&amp;<!-- TMPL_LOOP NAME="searchdata" --><!-- TMPL_VAR NAME="term" -->=<!-- TMPL_VAR NAME="val" ESCAPE=URL -->&amp;<!-- /TMPL_LOOP -->resultsperpage=<!-- TMPL_VAR NAME="resultsperpage" -->&amp;authtypecode=<!-- TMPL_VAR name="authtypecode" -->&op=do_search&type=intranet">
 							<img src="/intranet-tmpl/default/images/numbers/<!-- TMPL_VAR NAME="number" -->.gif" border="0"></a>
 					<!-- /TMPL_IF -->
 				<!-- /TMPL_LOOP -->
 				<!-- TMPL_IF name="displaynext" -->
-					<a href="auth_finder.pl?startfrom=<!-- TMPL_VAR NAME="startfromnext" -->&amp;&amp;authtypecode=<!-- TMPL_VAR name="authtypecode" -->&and_or=and&operator=contains&value=<!-- TMPL_VAR NAME="resultstring" -->&op=do_search&type=intranet&index=<!-- TMPL_VAR name="index" -->">
+					<a href="auth_finder.pl?startfrom=<!-- TMPL_VAR NAME="startfromnext" -->&amp;<!-- TMPL_LOOP NAME="searchdata" --><!-- TMPL_VAR NAME="term" -->=<!-- TMPL_VAR NAME="val" ESCAPE=URL -->&amp;<!-- /TMPL_LOOP -->resultsperpage=<!-- TMPL_VAR NAME="resultsperpage" -->&amp;authtypecode=<!-- TMPL_VAR name="authtypecode" -->&op=do_search&type=intranet">
 						<img src="/intranet-tmpl/default/images/numbers/next.gif" border="0"></a>
 				<!-- /TMPL_IF -->
 			</p>
