Bug fixing : Using holdingbranch and not Location to locate an item.

--- a/koha-tmpl/intranet-tmpl/default/en/reports/catalogue_stats.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/reports/catalogue_stats.tmpl
@@ -157,8 +157,8 @@
 			</tr>
 			<!--TMPL_IF Name="hglghtLOC"--><tr class="hilighted"> <!--TMPL_ELSE --><tr><!--/TMPL_IF-->
 				<td>Location</td>
-				<td align="center"><input type="radio" name="Line" value="items.location"></td>
-				<td align="center"><input type="radio" name="Column" value="items.location"></td>
+				<td align="center"><input type="radio" name="Line" value="items.holdingbranch"></td>
+				<td align="center"><input type="radio" name="Column" value="items.holdingbranch"></td>
 				<td><!-- TMPL_VAR NAME="CGILocation" --> </td>
 			</tr>
 		</tbody>
